fix: prevent youtube player reset on mobile

--- a/src/app/components/background-music/background-music.css
+++ b/src/app/components/background-music/background-music.css
@@ -1,8 +1,9 @@
 youtube-player {
   pointer-events: none;
-  opacity: 0;
   user-select: none;
-  position: absolute;
-  height: 0;
-  width: 0;
+  position: fixed;
+  top: -9999px;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
 }
